components/MainTitle.module.css
.mainTitle {
  background: #24242e;
  display: flex;
  justify-self: center;
  max-width: 1216px;
  justify-content: center;
  padding: 1rem;
}

.mainTitleLeft,
.mainTitleRight {
  background-image: url('../public/gray-title.svg');
  background-repeat: repeat-x;
  background-origin: content-box;
  width: calc(0.5 * (100vw - 1216px));
  height: 240.36px;
  /* padding: 1rem; */
  float: right;
}

.mainTitleLeft {
  background-position: right;
}

.mainTitleContainer {
  display: flex;
  flex-direction: row;
  width: 100vw;
  justify-content: center;
}

.footnoteWrapper {
  display: flex;
  width: 100vw;
  flex-direction: row;
  justify-content: center;
}

.footnoteText {
  justify-content: right;
  background: rgba(0, 0, 0, 0.08);
  color: #ffffff;
  opacity: 0.32;
  border-radius: 4px;
  text-align: center;
  padding: 10px 16px;
  font-family: 'Cartridge';
  margin: 16px 32px;
}

.footnote {
  background: #24242e;
  display: flex;
  width: 100%;
  max-width: 1216px;
  flex-direction: row;
  justify-content: flex-end;
}

@media (max-width: 1216px) {
  .mainTitleLeft,
  .mainTitleRight {
    /* display: none; */
    background: #24242e;
  }
}

@media (max-width: 1280px) {
  .mainTitleContainer {
    /* background: #24242e; */
  }
}

